# social_media_agent

./: README.md  crewai_flow.html  pyproject.toml  social-media-agent.ipynb
src/social_media_agent/: main.py
src/social_media_agent/crews/evaluation_crew/: evaluation_crew.py
src/social_media_agent/crews/evaluation_crew/config/: agents.yaml  tasks.yaml
src/social_media_agent/crews/image_crew/: image_crew.py
src/social_media_agent/crews/image_crew/config/: agents.yaml  tasks.yaml
src/social_media_agent/crews/modify_crew/: modify_crew.py
src/social_media_agent/crews/modify_crew/config/: agents.yaml  tasks.yaml
src/social_media_agent/crews/post_crew/: post_crew.py
src/social_media_agent/crews/post_crew/config/: agents.yaml  tasks.yaml
src/social_media_agent/crews/research_crew/: research_crew.py
src/social_media_agent/crews/research_crew/config/: agents.yaml  tasks.yaml
src/social_media_agent/tools/: custom_tool.py
